Update email address in contact info

--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
                     <h3>Let's Connect</h3>
                     <p>I'm currently available for freelance projects and open to new opportunities. If you have a project in mind, a question, or just want to say hi, feel free to reach out!</p>
                     <div class="contact-details">
-                        <div class="contact-details-item"><span class="icon">📧</span><span>Smaron.dev@email.com</span></div>
+                        <div class="contact-details-item"><span class="icon">📧</span><span>manikchandrabiswas72@gmail.com</span></div>
                         <div class="contact-details-item"><span class="icon">📍</span><span>Dhaka, Bangladesh</span></div>
                     </div>
                 </div>
